--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@xiifain/nest-base",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "NestJS base controller and base service with composition and mixins",
   "author": "Aung Thiha <aungthiha.160898@gmail.com>",
   "license": "MIT",
@@ -16,7 +16,12 @@
     "prepublish:next": "npm run build",
     "publish:next": "npm publish --access public --tag next",
     "prepublish": "npm run build",
-    "publish": "npm publish --access public"
+    "release": "npm publish --access public",
+    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:cov": "jest --coverage"
   },
   "keywords": [
     "nestjs",
@@ -29,8 +34,18 @@
     "access": "public"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.0",
     "@types/node": "^18.15.3",
+    "@typescript-eslint/eslint-plugin": "^5.56.0",
+    "@typescript-eslint/parser": "^5.56.0",
+    "eslint": "^8.36.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-prettier": "^4.2.1",
+    "jest": "^29.5.0",
+    "prettier": "^2.8.5",
     "rimraf": "^4.4.0",
+    "ts-jest": "^29.0.5",
     "typescript": "^5.0.2"
   },
   "dependencies": {
@@ -38,5 +53,25 @@
     "express": "^4.18.2",
     "rxjs": "^7.8.0",
     "typeorm": "^0.3.12"
+  },
+  "peerDependencies": {
+    "class-validator": "npm:@nestjs/class-validator@0.13.4"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "ts"
+    ],
+    "rootDir": "src",
+    "testRegex": ".*\\.spec\\.ts$",
+    "transform": {
+      "^.+\\.(t|j)s$": "ts-jest"
+    },
+    "collectCoverageFrom": [
+      "**/*.(t|j)s"
+    ],
+    "coverageDirectory": "../coverage",
+    "testEnvironment": "node"
   }
 }
